--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -1,1 +1,27 @@
-<h2>Settings</h2>
+<div class="list">
+    <div class="item range range-positive">
+        <i class="icon ion-ios7-sunny-outline"></i>
+        <input type="range" name="volume" min="0" max="100" value="33">
+        <i class="icon ion-ios7-sunny"></i>
+    </div>
+    <div class="item range range-positive">
+        <i class="icon ion-ios7-sunny-outline"></i>
+        <input type="range" name="volume" min="0" max="100" value="33">
+        <i class="icon ion-ios7-sunny"></i>
+    </div>
+    <div class="item range range-positive">
+        <i class="icon ion-ios7-sunny-outline"></i>
+        <input type="range" name="volume" min="0" max="100" value="33">
+        <i class="icon ion-ios7-sunny"></i>
+    </div>
+    <div class="item range range-positive">
+        <i class="icon ion-ios7-sunny-outline"></i>
+        <input type="range" name="volume" min="0" max="100" value="33">
+        <i class="icon ion-ios7-sunny"></i>
+    </div>
+    <div class="item range range-positive">
+        <i class="icon ion-ios7-sunny-outline"></i>
+        <input type="range" name="volume" min="0" max="100" value="33">
+        <i class="icon ion-ios7-sunny"></i>
+    </div>
+</div>
