--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -4,22 +4,31 @@
 <br/>
 
 <div class="row">
-
-    <div class="col col-50">
-        <h2>Photos Profile</h2>
-       
-    </div>
+    <div class="col col-10"></div>
+    <div class="col col-30">
+            <img src="./img/avatar.jpg" height="150">            
+      </div>
     <div class="col">
-     <h3>Name :</h3>
-    
-    <h3>Sex :</h3>
-        <h3>Age :</h3>
+     <h4>Name : Kern Matthieu</h4>
+    <h4>Gender: Male</h4>
+        <h4>Size : 1.90</h4>
+        <h4>Age : 20</h4>
 </div>
 </div
 <div class="row">
     <div class="col">
-    <h3>Statistics :</h3>
-     
-    <img src="./img/graph.png" height="250">
+    <div class="list card">
+    <div class="item item-avatar">
+        <img src="./img/avatar.jpg" height="150">   
+    <h2>Historique Utilisateurs</h2>   
+    
+        <h2>Statistics</h2>
+        <p>Date : 22 Mars 2015</p> 
+        </div>
+    <div class="item item-body">    
+    <img class:"full-image" src="./img/graph.png" height="190">
+    
+    </div>
+        </div>
     </div>
 </div>    
