--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -2,33 +2,34 @@
 <br/>
 <br/>
 <br/>
-
+<ion-content class="has-header" overflow-scroll="true">
 <div class="row">
     <div class="col col-10"></div>
     <div class="col col-30">
-            <img src="./img/avatar.jpg" height="150">            
-      </div>
-    <div class="col">
+         <img src="./img/avatar.jpg" height="120">            
+    </div>
+    <div class="col col-40">
      <h4>Name : Kern Matthieu</h4>
     <h4>Gender: Male</h4>
         <h4>Size : 1.90</h4>
         <h4>Age : 20</h4>
 </div>
-</div
-<div class="row">
-    <div class="col">
+</div>
+
+    
     <div class="list card">
     <div class="item item-avatar">
-        <img src="./img/avatar.jpg" height="150">   
+        <img src="./img/avatar.jpg" height="1Z0">   
     <h2>Historique Utilisateurs</h2>   
     
         <h2>Statistics</h2>
         <p>Date : 22 Mars 2015</p> 
-        </div>
+     </div>
     <div class="item item-body">    
-    <img class:"full-image" src="./img/graph.png" height="190">
+    <img class:"full-image" src="./img/graph.png" height="110">
     
     </div>
-        </div>
-    </div>
-</div>    
+  </div>
+    
+
+</ion-content>
