--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,48 +1,46 @@
-
-<br/>
-<br/>
-<br/>
 <ion-content class="has-header" overflow-scroll="true">
-<div class="list card">
-  
-<h2 class="pading-status" align="center">Tout va bien</h2>
-<img class="full-image " src="./img/status/status_ok.png">
-  <div class="item item-avatar item-header-color">
-    
-    
-    <h2 class="item-title-color">Ovulation</h2>
-   
-  </div>
-<img class="item-title-img-padding" src="./img/spermatazoide.png" heigth="50">
-  <div class="item item-body">
-    <h1 class="item-body-color pading-head-title">Conception : J-3</h1>
-    <h2>Le conseil du médecin</h2>
-    <p>C'est dans 3 jours que vos chances de tomber enceinte seront les plus grandes. Amusez-vous bien ! </p>
-    <div class="small-padding-bottom"></div>
-  </div>
-</div>
-  <div class="list card">
-  
-<h2 class="pading-status" align="center">Tout va bien</h2>
-<img class="full-image " src="./img/status/status_ok.png">
-  <div class="item item-avatar item-header-color">
-    
-    
-    <h2 class="item-title-color">Ovulation</h2>
-   
-  </div>
-<img class="item-title-img-padding" src="./img/spermatazoide.png" heigth="50">
-  <div class="item item-body">
-    <h1 class="item-body-color pading-head-title">Conception : J-3</h1>
-    <h2>Le conseil du médecin</h2>
-    <p>C'est dans 3 jours que vos chances de tomber enceinte seront les plus grandes. Amusez-vous bien ! </p>
-    <div class="small-padding-bottom"></div>
-  </div>
-</div>
-</ion-content>
- 
-<br>
-<div ng-repeat="item in dataReference">
-  {{ item }}
-</div>
+    <div class="list card">
 
+        <div>
+            <img class="full-image " src="./img/status/status_ok.png">
+        </div>
+        <div class="item item-avatar item-header-color">
+            <h2 class="item-title-color">Ovulation</h2>
+        </div>
+
+        <img class="item-title-img-padding" src="./img/spermatazoide.png" heigth="50">
+
+        <div class="item item-body">
+            <h1 class="item-body-color pading-head-title">Conception : J-3</h1>
+
+            <h2>Le conseil du médecin</h2>
+
+            <p>C'est dans 3 jours que vos chances de tomber enceinte seront les plus grandes. Amusez-vous bien ! </p>
+
+            <div class="small-padding-bottom"></div>
+        </div>
+    </div>
+    <div class="list card">
+
+        <h2 class="pading-status" align="center">Tout va bien</h2>
+        <img class="full-image " src="./img/status/status_ok.png">
+
+        <div class="item item-avatar item-header-color">
+
+
+            <h2 class="item-title-color">Ovulation</h2>
+
+        </div>
+        <img class="item-title-img-padding" src="./img/spermatazoide.png" heigth="50">
+
+        <div class="item item-body">
+            <h1 class="item-body-color pading-head-title">Conception : J-3</h1>
+
+            <h2>Le conseil du médecin</h2>
+
+            <p>C'est dans 3 jours que vos chances de tomber enceinte seront les plus grandes. Amusez-vous bien ! </p>
+
+            <div class="small-padding-bottom"></div>
+        </div>
+    </div>
+</ion-content>
