--- a/scss/style.scss
+++ b/scss/style.scss
@@ -21,7 +21,11 @@ body{
   /*  border-top-right-radius: 10px;
    border-top-left-radius: 10px;*/
   background-color: #1C8B6E;
-
+  padding-left: 20px;
+  padding-top: 18px;
+  h2{
+    font-size: 1.8em;
+  }
 }
 
 .item-title-color{
