--- a/scss/style.scss
+++ b/scss/style.scss
@@ -33,12 +33,12 @@ body{
 }
 
 .item-title-img-padding{
-  right:0;
-  position: absolute;
-  top: 150px;
-  height: 60px;
-  z-index: 1500;
-  margin-top: 10px;
+  float: right;
+  top: -50px;
+  position: relative;
+  z-index: 10;
+  width: 100px;
+  right: 30px;
 }
 
 
