--- a/www/css/style.css
+++ b/www/css/style.css
@@ -23,12 +23,12 @@ body {
   color: white; }
 
 .item-title-img-padding {
-  right: 0;
-  position: absolute;
-  top: 150px;
-  height: 60px;
-  z-index: 1500;
-  margin-top: 10px; }
+  float: right;
+  top: -50px;
+  position: relative;
+  z-index: 10;
+  width: 100px;
+  right: 30px; }
 
 .item-body-border {
   border-color: #1C8B6E;
