--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,5 +1,5 @@
-<ion-content class="has-header" overflow-scroll="true">
-    <div class="list card">
+<ion-content>
+    <div class="card">
 
         <div>
             <img class="full-image " src="./img/status/status_ok.png">
@@ -8,7 +8,7 @@
             <h2 class="item-title-color">Ovulation</h2>
         </div>
 
-        <img class="item-title-img-padding" src="./img/spermatazoide.png" heigth="50">
+        <img class="item-title-img-padding" src="./img/spermatazoide.png">
 
         <div class="item item-body">
             <h1 class="item-body-color pading-head-title">Conception : J-3</h1>
@@ -20,7 +20,7 @@
             <div class="small-padding-bottom"></div>
         </div>
     </div>
-    <div class="list card">
+    <div class="card">
 
         <h2 class="pading-status" align="center">Tout va bien</h2>
         <img class="full-image " src="./img/status/status_ok.png">
