--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -1,9 +1,10 @@
 <ion-content>
-    <div class="card">
+    <div>
 
         <div>
             <img class="full-image " src="./img/status/status_ok.png">
         </div>
+        <div class="card">
         <div class="item item-avatar item-header-color">
             <h2 class="item-title-color">Ovulation</h2>
         </div>
@@ -20,18 +21,15 @@
             <div class="small-padding-bottom"></div>
         </div>
     </div>
-    <div class="card">
-
-        <h2 class="pading-status" align="center">Tout va bien</h2>
-        <img class="full-image " src="./img/status/status_ok.png">
-
+    </div>
+<div>
+ 
+        <div class="card">
         <div class="item item-avatar item-header-color">
-
-
             <h2 class="item-title-color">Ovulation</h2>
-
         </div>
-        <img class="item-title-img-padding" src="./img/spermatazoide.png" heigth="50">
+
+        <img class="item-title-img-padding" src="./img/spermatazoide.png">
 
         <div class="item item-body">
             <h1 class="item-body-color pading-head-title">Conception : J-3</h1>
@@ -42,5 +40,6 @@
 
             <div class="small-padding-bottom"></div>
         </div>
+    </div>
     </div>
 </ion-content>
