--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -2,7 +2,7 @@
     <div>
 
         <div>
-            <img class="full-image " src="./img/status/status_ok.png">
+            <a href="/#/profile"><img class="full-image " src="./img/status/status_ok.png"></a>
         </div>
         <div class="card">
         <div class="item item-avatar item-header-color">
