--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -1,35 +1,80 @@
-<br/>
-<br/>
-<br/>
-<br/>
-<ion-content class="has-header" overflow-scroll="true">
-<div class="row">
-    <div class="col col-10"></div>
-    <div class="col col-30">
-         <img src="./img/avatar.jpg" height="120">            
-    </div>
-    <div class="col col-40">
-     <h4>Name : Kern Matthieu</h4>
-    <h4>Gender: Male</h4>
-        <h4>Size : 1.90</h4>
-        <h4>Age : 20</h4>
-</div>
-</div>
 
-    
-    <div class="list card">
-    <div class="item item-avatar">
-        <img src="./img/avatar.jpg" height="1Z0">   
-    <h2>Historique Utilisateurs</h2>   
-    
-        <h2>Statistics</h2>
-        <p>Date : 22 Mars 2015</p> 
-     </div>
-    <div class="item item-body">    
-    <img class:"full-image" src="./img/graph.png" height="110">
-    
+<ion-content class="has-header" >
+
+    <div>
+
+        <div>
+            <a href="/#/home"><img class="full-image " src="./img/status/retour.png"></a>
+        </div>
+        <div class="card">
+        <div class="item item-avatar item-header-color">
+            <h2 class="item-title-color">Océane, 29 ans</h2>
+        </div>
+
+        <img class="item-title-img-padding" src="./img/avatar_profile.png">
+
+        <div class="item item-body">
+            <h1 class="item-body-color pading-head-title">Sélectionnez les sujets qui vous tiennent à coeur</h1>
+
+           <ul class="list">
+                <li class="item item-checkbox">
+     <label class="checkbox">
+       <input type="checkbox">
+     </label>
+     Contraception naturel
+  </li>
+
+
+  <li class="item item-checkbox">
+     <label class="checkbox">
+       <input type="checkbox">
+     </label>
+     Désir de grossesse
+  </li>
+ <li class="item item-checkbox">
+     <label class="checkbox">
+       <input type="checkbox">
+     </label>
+     Infection urinaire
+  </li>
+ <li class="item item-checkbox">
+     <label class="checkbox">
+       <input type="checkbox">
+     </label>
+     Risque diabète
+  </li>
+<li class="item item-checkbox">
+     <label class="checkbox">
+       <input type="checkbox">
+     </label>
+     Suivi hormonal
+  </li>
+
+ <li class="item item-checkbox">
+     <label class="checkbox">
+       <input type="checkbox">
+     </label>
+     Surveillance des reins
+  </li>
+ <li class="item item-checkbox">
+     <label class="checkbox">
+       <input type="checkbox">
+     </label>
+     Surveillance du foie
+  </li>
+ <li class="item item-checkbox">
+     <label class="checkbox">
+       <input type="checkbox">
+     </label>
+        Test de grossesse
+  </li>
+
+
+</ul>
+
+            <div class="small-padding-bottom"></div>
+        </div>
     </div>
-  </div>
-    
+    </div>
 
 </ion-content>
