--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -4,23 +4,8 @@
         <div>
             <a href="/#/profile"><img class="full-image " src="./img/status/stat_ok.png"></a>
         </div>
-        <div class="card">
-        <div class="item item-avatar item-header-color">
-            <h2 class="item-title-color">Ovulation</h2>
-        </div>
+        <display-symptom></display-symptom>
 
-        <img class="item-title-img-padding" src="./img/spermatazoide.png">
-
-        <div class="item item-body">
-            <h1 class="item-body-color pading-head-title">Conception : J-3</h1>
-
-            <h2>Le conseil du médecin</h2>
-
-            <p>C'est dans 3 jours que vos chances de tomber enceinte seront les plus grandes. Amusez-vous bien ! </p>
-
-            <div class="small-padding-bottom"></div>
-        </div>
-    </div>
     </div>
 
 </ion-content>
