--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -2,7 +2,7 @@
     <div>
 
         <div>
-            <a href="/#/profile"><img class="full-image " src="./img/status/stat_ok.png"></a>
+            <a ui-sref="profile"><img class="full-image " src="./img/status/stat_ok.png"></a>
         </div>
         <display-symptom></display-symptom>
 
