--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -1,80 +1,73 @@
-
-<ion-content class="has-header" >
-
+<ion-content class="has-header">
     <div>
-
         <div>
-            <a href="/#/home"><img class="full-image " src="./img/status/retour.png"></a>
+            <a ui-sref="home"><img class="full-image " src="./img/status/retour.png"></a>
         </div>
         <div class="card">
-        <div class="item item-avatar item-header-color">
-            <h2 class="item-title-color">Océane, 29 ans</h2>
+            <div class="item item-avatar item-header-color">
+                <h2 class="item-title-color">Océane, 29 ans</h2>
+            </div>
+
+            <img class="item-title-img-padding" src="./img/avatar_profile.png">
+
+            <div class="item item-body">
+                <h1 class="item-body-color pading-head-title">Sélectionnez les sujets qui vous tiennent à coeur</h1>
+
+                <ul class="list">
+                    <li class="item item-checkbox">
+                        <label class="checkbox">
+                            <input type="checkbox">
+                        </label>
+                        Contraception naturel
+                    </li>
+                    <li class="item item-checkbox">
+                        <label class="checkbox">
+                            <input type="checkbox">
+                        </label>
+                        Désir de grossesse
+                    </li>
+                    <li class="item item-checkbox">
+                        <label class="checkbox">
+                            <input type="checkbox">
+                        </label>
+                        Infection urinaire
+                    </li>
+                    <li class="item item-checkbox">
+                        <label class="checkbox">
+                            <input type="checkbox">
+                        </label>
+                        Risque diabète
+                    </li>
+                    <li class="item item-checkbox">
+                        <label class="checkbox">
+                            <input type="checkbox">
+                        </label>
+                        Suivi hormonal
+                    </li>
+
+                    <li class="item item-checkbox">
+                        <label class="checkbox">
+                            <input type="checkbox">
+                        </label>
+                        Surveillance des reins
+                    </li>
+                    <li class="item item-checkbox">
+                        <label class="checkbox">
+                            <input type="checkbox">
+                        </label>
+                        Surveillance du foie
+                    </li>
+                    <li class="item item-checkbox">
+                        <label class="checkbox">
+                            <input type="checkbox">
+                        </label>
+                        Test de grossesse
+                    </li>
+                </ul>
+
+                <div class="small-padding-bottom"></div>
+            </div>
         </div>
-
-        <img class="item-title-img-padding" src="./img/avatar_profile.png">
-
-        <div class="item item-body">
-            <h1 class="item-body-color pading-head-title">Sélectionnez les sujets qui vous tiennent à coeur</h1>
-
-           <ul class="list">
-                <li class="item item-checkbox">
-     <label class="checkbox">
-       <input type="checkbox">
-     </label>
-     Contraception naturel
-  </li>
-
-
-  <li class="item item-checkbox">
-     <label class="checkbox">
-       <input type="checkbox">
-     </label>
-     Désir de grossesse
-  </li>
- <li class="item item-checkbox">
-     <label class="checkbox">
-       <input type="checkbox">
-     </label>
-     Infection urinaire
-  </li>
- <li class="item item-checkbox">
-     <label class="checkbox">
-       <input type="checkbox">
-     </label>
-     Risque diabète
-  </li>
-<li class="item item-checkbox">
-     <label class="checkbox">
-       <input type="checkbox">
-     </label>
-     Suivi hormonal
-  </li>
-
- <li class="item item-checkbox">
-     <label class="checkbox">
-       <input type="checkbox">
-     </label>
-     Surveillance des reins
-  </li>
- <li class="item item-checkbox">
-     <label class="checkbox">
-       <input type="checkbox">
-     </label>
-     Surveillance du foie
-  </li>
- <li class="item item-checkbox">
-     <label class="checkbox">
-       <input type="checkbox">
-     </label>
-        Test de grossesse
-  </li>
-
-
-</ul>
-
-            <div class="small-padding-bottom"></div>
-        </div>
-    </div>
     </div>
 
 </ion-content>
