--- a/www/templates/consigns.html
+++ b/www/templates/consigns.html
@@ -1,7 +1,16 @@
 <ion-content>
-  <div>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-    <br>
-    <button class="button button-full button-balanced" ui-sref="home">OK !</button>
-  </div>
+    <div class="list list-inset">
+        <div class="item">
+            Avez-vous lave vos maíns?
+        </div>
+        <div class="item">
+            Avez-vous manipule du sucre?
+        </div>
+        <div class="item">
+            Avez-vous mis vos doigts dans le cul de quelqu'un?
+        </div>
+    </div>
+
+    <a class="button button-outline icon-right ion-navicon button-balanced pull-right" style="float: right;margin-right: 10px;" ng-click="toHome()">Kwel</a>
+
 </ion-content>
