New images - Enlarging area for settings

--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -1,7 +1,7 @@
 <ion-content class="has-header">
     <div>
         <div>
-            <a ui-sref="home"><img class="full-image " src="./img/status/retour.png"></a>
+            <a ui-sref="home"><img class="full-image " src="./img/status/retourOK.png"></a>
         </div>
         <div class="card">
             <div class="item item-avatar item-header-color">
@@ -10,7 +10,7 @@
 
             <img class="item-title-img-padding" src="./img/avatar_profile.png">
 
-            <div class="item item-body">
+            <div class="item item-body" style="  width: 100%;top: -100px;">
                 <h1 class="item-body-color pading-head-title">Sélectionnez les sujets qui vous tiennent à coeur</h1>
 
                 <ul class="list">
