--- a/www/templates/consigns.html
+++ b/www/templates/consigns.html
@@ -1,7 +1,7 @@
 <ion-content>
     <div class="list list-inset">
         <div class="item">
-            Avez-vous lave vos maíns?
+            Avez-vous laver vos mains?
         </div>
         <div class="item">
             Avez-vous manipule du sucre?
