--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -22,19 +22,19 @@
                     </li>
                     <li class="item item-checkbox">
                         <label class="checkbox">
-                            <input type="checkbox">
+                            <input type="checkbox" checked>
                         </label>
                         Désir de grossesse
                     </li>
                     <li class="item item-checkbox">
                         <label class="checkbox">
-                            <input type="checkbox">
+                            <input type="checkbox" checked>
                         </label>
                         Infection urinaire
                     </li>
                     <li class="item item-checkbox">
                         <label class="checkbox">
-                            <input type="checkbox">
+                            <input type="checkbox" checked>
                         </label>
                         Risque diabète
                     </li>
@@ -59,7 +59,7 @@
                     </li>
                     <li class="item item-checkbox">
                         <label class="checkbox">
-                            <input type="checkbox">
+                            <input type="checkbox" checked>
                         </label>
                         Test de grossesse
                     </li>
