Styling home card

--- a/www/templates/displaySymptoms.html
+++ b/www/templates/displaySymptoms.html
@@ -5,13 +5,11 @@
 
     <img class="item-title-img-padding" src="./img/spermatazoide.png">
 
-    <div class="item item-body">
+    <div class="item item-body" style="width: 100%;top: -95px;">
         <h1 class="item-body-color pading-head-title">Conception : J-3</h1>
 
         <h2>Le conseil du médecin</h2>
 
         <p>C'est dans 3 jours que vos chances de tomber enceinte seront les plus grandes. Amusez-vous bien !</p>
-
-        <div class="small-padding-bottom"></div>
     </div>
 </div>
