--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,7 +3,6 @@
 }
 
 body {
-  padding-top: 40px;
   font-family: 'Source Sans Pro', "sans-serif";
 }
 
@@ -59,6 +58,12 @@ h1, h2, h3, h4, h5{
 .item-body{
   h1{
     font-size: 30px;
+  }
+  h2{
+    font-size: 21px;
+  }
+  p{
+    font-size: 16px;
   }
   ul{
     li{
