--- a/www/css/style.css
+++ b/www/css/style.css
@@ -2,7 +2,6 @@
   font-family: 'Source Sans Pro', sans-serif; }
 
 body {
-  padding-top: 40px;
   font-family: 'Source Sans Pro', "sans-serif"; }
 
 h1, h2, h3, h4, h5 {
@@ -47,6 +46,10 @@ h1, h2, h3, h4, h5 {
 
 .item-body h1 {
   font-size: 30px; }
+.item-body h2 {
+  font-size: 21px; }
+.item-body p {
+  font-size: 16px; }
 .item-body ul li {
   font-size: 21px; }
 
