--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Source Sans Pro', "sans-serif";
 }
 
 body {
@@ -57,14 +57,26 @@ h1, h2, h3, h4, h5{
 }
 .item-body{
   h1{
+    margin-top: 10px;
     font-size: 30px;
+    text-align: center;
+    font-weight: bold;
   }
+
   h2{
+
     font-size: 21px;
+    margin-bottom: 6px;
+    margin-top: 40px;
+    font-weight: bold;
   }
+
   p{
-    font-size: 16px;
+    font-size: 22px;
+    line-height: 22px;
+    margin-top: 6px;
   }
+
   ul{
     li{
       font-size: 21px;
