displaying proper cards

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -5,7 +5,7 @@
 			<a ui-sref="profile"><img class="full-image " src="./img/status/statusOK.png"></a>
 		</div>
 		<div ng-repeat="result in results">
-			<display-symptom ng-repeat="symptom in symptoms"></display-symptom>
+			<display-symptom symptom="{{symptoms[result]}}" ng-if="symptoms[result]"></display-symptom>
 		</div>
 	</div>
 
