--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,7 @@
 
 body {
   font-family: 'Source Sans Pro', "sans-serif";
+  background-color: #27ae60;
 }
 
 h1, h2, h3, h4, h5{
@@ -91,4 +92,10 @@ h1, h2, h3, h4, h5{
 
 .item-body-color {
   color: #1C8B6E;
+}
+
+.ovulation{
+  width: 95%;
+  display: block;
+  margin: 20px auto auto;
 }
