--- a/www/css/style.css
+++ b/www/css/style.css
@@ -2,7 +2,8 @@
   font-family: 'Source Sans Pro', "sans-serif"; }
 
 body {
-  font-family: 'Source Sans Pro', "sans-serif"; }
+  font-family: 'Source Sans Pro', "sans-serif";
+  background-color: #27ae60; }
 
 h1, h2, h3, h4, h5 {
   font-family: 'Source Sans Pro', "sans-serif"; }
@@ -67,3 +68,8 @@ h1, h2, h3, h4, h5 {
 
 .item-body-color {
   color: #1C8B6E; }
+
+.ovulation {
+  width: 95%;
+  display: block;
+  margin: 20px auto auto; }
