--- a/www/css/style.css
+++ b/www/css/style.css
@@ -73,3 +73,23 @@ h1, h2, h3, h4, h5 {
   width: 95%;
   display: block;
   margin: 20px auto auto; }
+
+button {
+  display: block;
+  padding: 30px;
+  width: 300px;
+  margin: auto;
+  text-align: center;
+  font-size: 26px;
+  background-color: white;
+  border: 3px solid #f39c12;
+  border-radius: 20px; }
+
+.around-button {
+  padding: 10px; }
+
+.button-link {
+  text-decoration: none;
+  color: #f39c12;
+  margin-top: 20px;
+  margin-bottom: 20px; }
