--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -5,9 +5,14 @@
 			<a ui-sref="profile"><img class="full-image " src="./img/status/statusOK.png"></a>
 		</div>
 		<div ng-repeat="result in results">
-			<display-symptom symptom="{{cards[result]}}" ng-if="cards[result]" ng-if="result == LH" ng-click="goTo('ovulation')"></display-symptom>
+			<display-symptom display="{{result}}"
+			                 symptom="{{cards[result]}}"
+			                 ng-if="result == 'LHPositive'"
+			                 ng-click="goTo('ovulation')"></display-symptom>
 
-			<display-symptom symptom="{{cards[result]}}" ng-if="cards[result]" ng-if="result != LH"></display-symptom>
+			<display-symptom display="{{result}}"
+			                 symptom="{{cards[result]}}"
+			                 ng-if="result != 'LHPositive'"></display-symptom>
 
 		</div>
 	</div>
