--- a/www/css/style.css
+++ b/www/css/style.css
@@ -100,5 +100,6 @@ button {
 .LHPositive .item-header-color {
   background-color: #f39c12; }
 
-button.questionButton:focus {
-  background-color: #F1C40F; }
+button.questionButton {
+  font-weight: bold;
+  color: #f39c12; }
