--- a/www/css/style.css
+++ b/www/css/style.css
@@ -29,7 +29,8 @@ h1, h2, h3, h4, h5 {
    border-top-left-radius: 10px;*/
   background-color: #F1C40F;
   padding-left: 20px;
-  padding-top: 18px; }
+  padding-top: 18px;
+  padding-bottom: 31px; }
 
 .item-header-color h2 {
   font-size: 1.8em; }
@@ -42,7 +43,7 @@ h1, h2, h3, h4, h5 {
   top: -50px;
   position: relative;
   z-index: 10;
-  width: 100px;
+  width: 80px;
   right: 30px; }
 
 .item-body h1 {
@@ -99,7 +100,3 @@ button {
 
 .LHPositive .item-header-color {
   background-color: #f39c12; }
-
-button.questionButton {
-  font-weight: bold;
-  color: #f39c12; }
