--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -18,7 +18,7 @@
                         <label class="checkbox">
                             <input type="checkbox">
                         </label>
-                        Contraception naturel
+                        Contraception naturelle
                     </li>
                     <li class="item item-checkbox">
                         <label class="checkbox">
@@ -36,7 +36,7 @@
                         <label class="checkbox">
                             <input type="checkbox" checked>
                         </label>
-                        Risque diabète
+                        Risque de diabète
                     </li>
                     <li class="item item-checkbox">
                         <label class="checkbox">
