--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -5,7 +5,7 @@
         </div>
         <div class="card">
             <div class="item item-avatar item-header-color">
-                <h2 class="item-title-color">Océane, 29 ans</h2>
+                <h2 class="item-title-color">Justine, 34 ans</h2>
             </div>
 
             <img class="item-title-img-padding" src="./img/avatar_profile.png">
