--- a/www/templates/consigns.html
+++ b/www/templates/consigns.html
@@ -1,6 +1,6 @@
 <ion-content class="has-header">
 	<div>
-		<a ui-sref="home"><img class="full-image" src="./img/status/statusOK.png"></a>
+		<a ui-sref="consigns"><img class="full-image" src="./img/status/header_logo.png"></a>
 	</div>
 
 	<div class="card">
